2014-07-09  Andy Buckley  <andy.buckley@cern.ch>

	* Update CONFIGFLAGS docs to fix some errors w.r.t. actual flag usage.

	* Treat a DataVersion of 0 as unvalidated: valid numbers now start at 1.

	* Remove the LHAPDF ID from the warning printout about unvalidated
	PDFs, since in that case there will usually be no standard ID
	number and it just gets unhelpfully reported as -1.

	* Detect and report improperly terminated grid files (ones missing a --- final line).

	* Replace asserts with exceptions and improve subgrid error reporting in GridPDF.

	* Report the value of Q2 that causes a subgrid-finding failure.

	* Improve testgrid to use PDFNAME/MEMNUM arg syntax.

2014-07-7 David Grellscheid <david.grellscheid@ippp.dur.ac.uk>

	* Forbid compilation if the demon combination of Boost < 1.47 and
	GCC >= 4.6, with a serious bug in BOOST_FOREACH, is found:
	http://code-muse.com/2013/08/06/boostforeach-and-compiler-bugs

2014-06-18 Karl Nordstrom <karl.nordstrom@cern.ch>

	* Improved AlphaS ODE solver performance.

2014-06-17  Andy Buckley  <andy.buckley@cern.ch>

	* 6.1.3 release!

	* tests/Makefile.am: Add appropriate programs to "make installcheck".

2014-06-17  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* wrappers/python/Makefile.am: 'make distcheck' and out-of-source
        builds should work now.

2014-06-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add CVMFS and AFS downloading (by preference) to the lhapdf
	script, as well as user-configurable download sources and tarball
	removal.

	* Fix bug in PDF::qcdOrder method, and deprecate that method in
	favour of orderQCD (to match AlphaS and the flag name).

	* Further improvements to error messages when trying to load an invalid PDF.

	* Tweak output of testalphas.cc

	* Adding first make check targets (requires CT10nlo to be installed).

2014-06-15  Andy Buckley  <andy.buckley@cern.ch>

	* Flavour thresholds in alpha_s solvers, and threshold subgrids
	from ODE solver (by Karl Nordstrom)
